# captcha-solver

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
captcha_solver/: __init__.py  solver.py  types.py
captcha_solver/browser/: __init__.py  browser_solver.py
