[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "captcha-solver-ai"
version = "0.1.0"
description = "Universal captcha solving engine — any captcha, any platform, any language"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "Pillow>=10.0.0",
    "playwright>=1.40.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]
